# 4DMath_Library

./: Math_Library.sln
Math_Library/: CMakeLists.txt  Math_Library.cpp  Math_Library.cpp.orig  Math_Library.vcxproj  Math_Library.vcxproj.filters  matrix4D.h  vector4D.h
Math_Library/code/: Math_Library.cpp  Math_Library.cpp.orig  Math_Library.vcxproj  main.cc  vector4D.h
